--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
   <title>Tic Tac Toe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/d3/d3.min.js"></script>
 </head>
 
 <body>
   <!-- Start of Tic Tac Toe HTML -->
+  <svg id="circle0" width="200" height="200" viewbox="-1.5 -1.5 3 3">
+    <rect width="3" height="3" x="-1.5" y="-1.5" stroke="white" stroke-width="0.01"/>
+    <!-- <path d="M0,1 C0.552,1 1,0.552 1,0 S0.552,-1 0,-1 S-1,-0.552 -1,0 S-0.552,1 0,1" stroke="white" stroke-width="0.01" fill="none" /> -->
+
+  </svg>
 
 
 
 
   <!-- <End> of Tic Tac Toe HTML -->
-
   <script src="js/index.js"></script>
-  <script src="js/p5.min.js"></script>
 </body>
 
 </html>
