--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
 <body>
   <!-- Start of Tic Tac Toe HTML -->
   <svg id="circle0" width="200" height="200" viewbox="-1.5 -1.5 3 3">
+    <filter id="chalkTexture">
+      <feTurbulence result="TURBULENCE" type="fractalNoise" baseFrequency="0.05" numOctaves="2" seed="2" />
+      <feDisplacementMap in="SourceGraphic" in2="TURBULENCE" scale="5" result="raggedContour" />
+      <feTurbulence result="turbulenceMask" type="turbulence" baseFrequency="100" numOctaves="3" stitchTiles="stitch" seed="3"/>
+      <feColorMatrix in="turbulenceMask" result="alphaMask" type="matrix" values="
+      0 0 0 0 1
+      0 0 0 0 1
+      0 0 0 0 1
+      0.3333 0.3333 0.3333 1 0" />
+     <feComposite in="alphaMask" in2="raggedContour" result="chalkPattern" operator="in" />
+    </filter>
     <rect width="3" height="3" x="-1.5" y="-1.5" stroke="white" stroke-width="0.01"/>
-    <!-- <path d="M0,1 C0.552,1 1,0.552 1,0 S0.552,-1 0,-1 S-1,-0.552 -1,0 S-0.552,1 0,1" stroke="white" stroke-width="0.01" fill="none" /> -->
-
   </svg>
 
 
