--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 <body>
   <!-- Start of Tic Tac Toe HTML -->
   <svg id="circle0" width="600" height="600" viewbox="-4.5 -4.5 9 9">
-    <filter id="chalkTexture">
-      <feTurbulence result="TURBULENCE" type="fractalNoise" baseFrequency="0.05" numOctaves="2" seed="2" />
-      <feDisplacementMap in="SourceGraphic" in2="TURBULENCE" scale="5" result="raggedContour" />
-      <feTurbulence result="turbulenceMask" type="turbulence" baseFrequency="100" numOctaves="3" stitchTiles="stitch" seed="3"/>
-      <feColorMatrix in="turbulenceMask" result="alphaMask" type="matrix" values="
+    <defs>
+      <filter id="chalkTexture">
+        <feTurbulence result="TURBULENCE" type="fractalNoise" baseFrequency="0.1" numOctaves="10" seed="2" />
+        <feDisplacementMap in="SourceGraphic" in2="TURBULENCE" scale="1" result="raggedContour" />
+        <feTurbulence result="turbulenceMask" type="turbulence" baseFrequency="100" numOctaves="3" stitchTiles="stitch" seed="3" />
+        <feColorMatrix in="turbulenceMask" result="alphaMask" type="matrix" values="
       0 0 0 0 1
       0 0 0 0 1
       0 0 0 0 1
       0.3333 0.3333 0.3333 1 0" />
-     <feComposite in="alphaMask" in2="raggedContour" result="chalkPattern" operator="in" />
-    </filter>
-    <rect width="9" height="9" x="-4.5" y="-4.5" stroke="red" stroke-width="0.01"/>
+        <feComposite in="alphaMask" in2="raggedContour" result="chalkPattern" operator="in" />
+      </filter>
+    </defs>
+    <rect width="9" height="9" x="-4.5" y="-4.5" stroke="red" stroke-width="0.01" />
   </svg>
 
 
