--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   <title>Tic Tac Toe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/d3/d3.min.js"></script>
 </head>
 
 <body>
   <!-- Start of Tic Tac Toe HTML -->
-  <svg id="circle0" width="600" height="600" viewbox="-4.5 -4.5 9 9">
+  <svg id="board" width="600" height="600" viewbox="-4.5 -4.5 9 9">
     <defs>
       <filter id="chalkTexture">
         <feTurbulence result="TURBULENCE" type="fractalNoise" baseFrequency="0.1" numOctaves="10" seed="2" />
@@ -26,7 +25,6 @@
         <feComposite in="alphaMask" in2="raggedContour" result="chalkPattern" operator="in" />
       </filter>
     </defs>
-    <rect width="9" height="9" x="-4.5" y="-4.5" stroke="red" stroke-width="0.01" />
   </svg>
 
 
