--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <!-- Start of Tic Tac Toe HTML -->
-  <svg id="board" width="600" height="600" viewbox="-4.5 -4.5 9 9">
+  <svg id="board" width="600" height="600" viewBox="-4.5 -4.5 9 9">
     <defs>
       <filter id="chalkTexture">
         <feTurbulence result="TURBULENCE" type="fractalNoise" baseFrequency="0.1" numOctaves="10" seed="2" />
