Accept only legal moves

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <!-- Start of Tic Tac Toe HTML -->
+  <div id="gameMsg"></div>
   <svg id="board" width="600" height="600" viewBox="-4.5 -4.5 9 9">
     <defs>
       <filter id="chalkTexture">
