--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
         <feDisplacementMap in="SourceGraphic" in2="TURBULENCE" scale="1" result="raggedContour" />
         <feTurbulence result="turbulenceMask" type="turbulence" baseFrequency="100" numOctaves="3" stitchTiles="stitch" seed="3" />
         <feColorMatrix in="turbulenceMask" result="alphaMask" type="matrix" values="
-      0 0 0 0 1
-      0 0 0 0 1
-      0 0 0 0 1
-      0.3333 0.3333 0.3333 1 0" />
+    0 0 0 0 1
+    0 0 0 0 1
+    0 0 0 0 1
+    0.3333 0.3333 0.3333 1 0" />
         <feComposite in="alphaMask" in2="raggedContour" result="chalkPattern" operator="in" />
       </filter>
     </defs>
   </svg>
-
-
+  <div id="mask"></div>
 
   <!-- <End> of Tic Tac Toe HTML -->
   <script src="js/index.js"></script>
